# Little-Test-Framework

./: .gitignore  CMakeLists.txt  LTF.h  README.md  design.txt  main.cpp
_tests/_test_files/: test_log.cpp  test_ltf.cpp  test_stub.cpp  test_suite.cpp
_tests/_test_utils/: test_utils.h
includes/: LTF.h  test.h
includes/little_test_framework/: little_test_framework.cpp  little_test_framework.h
includes/logger/: logger.cpp  logger.h
includes/logger_template/: logger_template.h
includes/singleton/: singleton.h
includes/test_case/: test_case.cpp  test_case.h
includes/test_entry/: test_entry.cpp  test_entry.h  test_manager.cpp  test_manager.h
includes/test_manager/: test_manager.cpp  test_manager.h
includes/test_suite/: test_suite.cpp  test_suite.h
includes/test_template/: test_template.h
